--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<ul>
 											<li><a href="https://github.com/mananjain10" target="_blank" rel="noopener noreferrer"><i class="icon-instagram"></i></a></li>
 											<li><a href="https://www.instagram.com/mananbohra07/" target="_blank" rel="noopener noreferrer"><i class="icon-instagram-3"></i></a></li>
-											<li><a href="https://uk.linkedin.com/in/manan-bohra-8984b8144?trk=people-guest_people_search-card" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin-squared"></i></a></li>
+											<li><a href="https://www.linkedin.com/in/mananbohra/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin-squared"></i></a></li>
 										</ul>
 									</div>
 								</div>
