--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								</div>
 								<div class="details">
 									<h3 class="name">Hi, I'm <br> Manan <span>Bohra*</span></h3>
-									<p class="job">There are only 10 types of people in this world: Those who understand binary and those who don't.</p>
+									<p class="job">Test github. There are only 10 types of people in this world: Those who understand binary and those who don't.</p>
 									<div class="social">
 										<ul>
 											<li><a href="https://github.com/mananjain10" target="_blank" rel="noopener noreferrer"><i class="icon-instagram"></i></a></li>
