--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 					<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 					<li><a href="#news">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="#pp">Privacy Policy</a></li>
 				</ul>
 			</div>
 		</div>
@@ -90,6 +91,7 @@
 						<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 						<li><a href="#news">Portfolio</a></li>
 						<li><a href="#contact">Contact</a></li>
+						<li><a href="#pp">Privacy Policy</a></li>
 					</ul>
 				</div>
 				<div class="copyright">
@@ -113,7 +115,7 @@
 								</div>
 								<div class="details">
 									<h3 class="name">Hi, I'm <br> Manan <span>Bohra*</span></h3>
-									<p class="job">Test github. There are only 10 types of people in this world: Those who understand binary and those who don't.</p>
+									<p class="job">There are only 10 types of people in this world: Those who understand binary and those who don't.</p>
 									<div class="social">
 										<ul>
 											<li><a href="https://github.com/mananjain10" target="_blank" rel="noopener noreferrer"><i class="icon-instagram"></i></a></li>
@@ -775,6 +777,75 @@
 					</div>	
 				</div>
 				<!-- /CONTACT -->
+				<!-- /PP-->
+				<div id="pp" class="tokyo_tm_section">
+					<div class="container">
+						<div class="tokyo_tm_about">
+							<div class="about_image">
+								<img src="img/thumbs/4-2.jpg" alt="" />
+								<div class="main" data-img-url="img/portfolio/min.jpg"></div>
+							</div>
+							<div class="description">
+								<h2 class="name"><span>Privacy Policy</span></h2>
+								<div class="description_inner">
+									<div>
+										<p>At Manan Game Studio, we take the privacy of our users seriously. This Privacy Policy outlines the information that is collected when you use our mobile applications and the ways in which we use that information.</p><br>
+									</div>
+								</div>
+								<h4 class="name">Apps with NO Ads</h4>
+								<div class="description_inner">
+									<div>
+										<p>• We do not use any third-party advertising.<br>
+											• We do not share data with any third party.<br>
+											• We do not collect any device data for purposes beyond third-party analytics.<br>
+											• We show only in-house ads of our own apps through "more apps" section and "try our new apps" popup.<br>
+											• We use Unity Analytics to track app install and IAP data, which is mentioned specifically in the App privacy section of the store listing page of each app.<br>
+											</p><br>
+									</div>
+								</div>
+								<h4 class="name">What third parties collect via our apps if they contain Ads</h4>
+								<div class="description_inner">
+									<div>
+										<p>We may collect some information automatically when you use our Apps. This includes data about your device, software, operating system, the language you’ve set for your Device, advertising IDs for advertisement tracking (“Advertising IDs”) and your IP address.<br>
+											We do not collect personally identifiable information about you or your children through our apps. In other words, we do not collect information such as your name, address, phone number or email address.<br>
+											Occasionally we collect the personal information that you voluntarily provide to us (e.g., email addresses you give us when you submit a request to support via our web or email).<br>
+											Few of our apps might use Google Analytics (third party scripts) that collect the following information and might (also) store such information as a cookie on the device you use to access our Apps:<br>
+											Google Analytics or Unity Analytics (Not applicable for IOS apps without Ads):<br>
+											Demographics (browser language, country, city);<br>
+											System information (browser, OS, service provider);<br>
+											Mobile (OS, service provider, screen resolution);<br>
+											Site behavior (which pages users visit, duration of visit);<br>
+											For more information about our partners’ practices, kindly visit the following links:<br>
+											https://www.google.com/policies/privacy/partners/<br>
+											https://policies.google.com/privacy<br>
+											https://unity3d.com/legal/privacy-policy<br>
+											</p><br>
+									</div>
+								</div>
+								<h4 class="name">How we use this information collected in our Games (Terms of Use)</h4>
+								<div class="description_inner">
+									<div>
+										<p>We collect this Information to improve performance and reliability of our Games and to get a better understanding of what users in general prefer. We do not link any of this Information in any way to individuals or any other information we might obtain. We do not share, sell, or in any other way give other persons or companies access to your information. We don’t rent or sell your email address.<br>
+											Our mobile applications comply with the Children’s Online Privacy Protection Act (“COPPA”). In the event that a user identifies himself/herself as a child under the age of 13 through a support request or feedback, we will not collect, store or use and will delete in a secure manner any personal information of such a user.<br>
+											We take care of filtering categories of sensitive and unsuitable ads for children. But rarely can an advertiser misclassify your ads, and this situation is beyond our reach.<br>
+											</p><br>
+									</div>
+								</div>
+								<h4 class="name">Changes to this privacy policy</h4>
+								<div class="description_inner">
+									<div>
+										<p>Manan Game Studio has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.<br>
+											For further information kindly visit the following links:<br>
+											https://www.apple.com/legal/internet-services/itunes/dev/stdeula/<br>
+											https://play.google.com/about/play-terms/index.html<br>
+											</p>											
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<!-- /PP-->
 
 			</div>
 		</div>
