--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 					<li><a href="#news">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#pp">Privacy Policy</a></li>
+					<li><a href="#privacy">Privacy Policy</a></li>
 				</ul>
 			</div>
 		</div>
@@ -91,7 +91,7 @@
 						<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 						<li><a href="#news">Portfolio</a></li>
 						<li><a href="#contact">Contact</a></li>
-						<li><a href="#pp">Privacy Policy</a></li>
+						<li><a href="#privacy">Privacy Policy</a></li>
 					</ul>
 				</div>
 				<div class="copyright">
@@ -778,7 +778,7 @@
 				</div>
 				<!-- /CONTACT -->
 				<!-- /PP-->
-				<div id="pp" class="tokyo_tm_section">
+				<div id="privacy" class="tokyo_tm_section">
 					<div class="container">
 						<div class="tokyo_tm_about">
 							<div class="about_image">
